--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = []
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+	"crates/docker"
+]
 
 [dependencies]
+docker = { version = "0.1.0", path = "crates/docker" }
